objects/Sales_Office__c.object
<CustomObject>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Newstar_ID__c</fullName>
        <externalId>true</externalId>
        <label>Newstar ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supported_Contract_Flows__c</fullName>
        <label>Supported Contract Flows</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct offer</fullName>
                    <default>true</default>
                    <label>Direct offer</label>
                </value>
                <value>
                    <fullName>Lot reservation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>NEWSTAR Sales Office</description>
    <label>Sales Office</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Offices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>Active_Only</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Only</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Is_Active__c</columns>
        <columns>Newstar_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>